src/test/deca/codegen/valid/custom/object/down_cast.deca
class A {
    int x = 1;
}

class B extends A {
    int x = 2;
}

{
    A a = new B();
    B b;
    println(a.x);

    b = (B) (a);
    println(b.x);
}