src/test/deca/codegen/invalid/custom/wrong_return.deca
class Montagne{

    int altitude;

    int getaltitude(){

    }
}

{
    Montagne croix = new Montagne();
    croix.altitude = 2977;
    println(croix.getaltitude());
}